Cleaned up followers page views

--- a/mobile/www/app/components/follow/follower/follower.html
+++ b/mobile/www/app/components/follow/follower/follower.html
@@ -1,9 +1,9 @@
-<ion-view view-title="Followers">
+<ion-view view-title="Followers" cache-view="false">
     <ion-content>
         <ion-list>
-            <ion-item ng-repeat="user in followers">
-                <user user="user"></user>
-            </ion-item>
+            <div ng-repeat="user in followers">
+                <tatami-user user="user"></tatami-user>
+            </div>
         </ion-list>
     </ion-content>
 </ion-view>
