Clicking the delete button will delete the status from the database

--- a/mobile/www/app/components/timeline/tab-timeline.html
+++ b/mobile/www/app/components/timeline/tab-timeline.html
@@ -1,21 +1,9 @@
-<ion-view view-title="Timeline">
+<ion-view view-title="Timeline" cache-view="false">
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="lineItem in lineItems" type="item-text-wrap" href="#/tab/timeline/{{lineItem.timelineId}}">
-                <img ng-src="{{ lineItem.avatarURL }}" />
-
-                <div class="profile-name">
-                    <h2 class="inline">{{lineItem.firstName}} {{lineItem.lastName}}</h2>
-                    <span class="inline subheading">{{lineItem.username}}</span>
-                    <span class="inline date">&nbsp;&#183; {{lineItem.prettyPrintStatusDate}}</span>
-                </div>
-                <p>{{lineItem.content}}</p>
-                <i class="icon ion-chevron-right icon-accessory"></i>
-
-                <ion-option-button class="button-assertive" ng-click="remove(lineItem)">
-                    Delete
-                </ion-option-button>
-            </ion-item>
+            <div ng-repeat="lineItem in lineItems">
+                <tatami-status status="lineItem"></tatami-status>
+            </div>
         </ion-list>
     </ion-content>
 </ion-view>
