--- a/mobile/www/app/components/follow/suggested/suggested.html
+++ b/mobile/www/app/components/follow/suggested/suggested.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Who to Follow" cache-view="false">
+<ion-view view-title="Who to Follow">
     <ion-content>
         <ion-list>
             <div ng-repeat="user in suggested">
