--- a/mobile/www/app/components/follow/following/following.html
+++ b/mobile/www/app/components/follow/following/following.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Following" cache-view="false">
+<ion-view view-title="Following">
     <ion-content>
         <ion-list>
             <div ng-repeat="user in vm.following">
