--- a/src/main/webapp/assets/styles/main.css
+++ b/src/main/webapp/assets/styles/main.css
@@ -199,4 +199,11 @@ ul#strengthBar {
     opacity: 1;
 }
 
+.left {
+    float:left;
+}
+
+.right{
+    float:right;
+}
 /* jhipster-needle-css-add-main JHipster will add new css style */
