Profile interface finished

--- a/mobile/www/app/components/profile/profile.html
+++ b/mobile/www/app/components/profile/profile.html
@@ -1,5 +1,10 @@
 <ion-view view-title="Profile">
     <ion-content>
         <tatami-user-detail user="vm.user"></tatami-user-detail>
+        <ion-list>
+            <div ng-repeat="status in vm.statuses">
+                <tatami-status status="status" current-user="vm.currentUser"></tatami-status>
+            </div>
+        </ion-list>
     </ion-content>
 </ion-view>
