--- a/mobile/www/app/components/login/login.html
+++ b/mobile/www/app/components/login/login.html
@@ -2,26 +2,26 @@
     <ion-content class="padding">
         <div class="list list-inset">
             <label class="item item-input">
-                <input type="text" placeholder="E-mail" ng-model="user.email">
+                <input type="text" placeholder="E-mail" ng-model="vm.user.email">
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Password" ng-model="user.password">
+                <input type="password" placeholder="Password" ng-model="vm.user.password">
             </label>
         </div>
 
         <div class="padding">
-            <button ng-disabled="!user.email && !user.password" class="button button-block button-calm" ng-click="login()">Login</button>
+            <button ng-disabled="!vm.user.email && !vm.user.password" class="button button-block button-calm" ng-click="vm.login()">Login</button>
         </div>
         <div class="padding">
-            <button ng-click="googleLogin()" class="button button-block button-stable">
+            <button ng-click="vm.googleLogin()" class="button button-block button-stable">
                 Log into Google
             </button>
         </div>
 
-        <div ng-if="shown" class="bar bar-positive">
+        <div ng-if="vm.shown" class="bar bar-positive">
             <h1 class="title">Logged In!</h1>
         </div>
-        <div ng-if="failed" class="bar bar-assertive">
+        <div ng-if="vm.failed" class="bar bar-assertive">
             <h1 class="title">Failed to log in!</h1>
         </div>
     </ion-content>
