Use PathService to make $resource requests

--- a/mobile/www/app/components/login/login.html
+++ b/mobile/www/app/components/login/login.html
@@ -1,5 +1,5 @@
 <ion-view name="login-view" view-title="Login">
-    <ion-content class="padding">
+    <ion-content class="has-header has-subheader">
         <div class="list list-inset">
             <label class="item item-input">
                 <input type="text" placeholder="E-mail" ng-model="vm.user.email">
