--- a/mobile/www/app/components/mentions/tab-mentions.html
+++ b/mobile/www/app/components/mentions/tab-mentions.html
@@ -1,16 +1,9 @@
-<ion-view view-title="Mentions">
+<ion-view view-title="Mentions" cache-view="false">
     <ion-content>
         <ion-list>
-            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="mention in mentions" type="item-text-wrap" href="#/tab/mentions/{{mention.id}}">
-                <img ng-src="{{mention.face}}">
-                <h2>{{mention.name}}</h2>
-                <p>{{mention.lastText}}</p>
-                <i class="icon ion-chevron-right icon-accessory"></i>
-
-                <ion-option-button class="button-assertive" ng-click="remove(mention)">
-                    Delete
-                </ion-option-button>
-            </ion-item>
+            <div ng-repeat="mention in vm.mentioned">
+                <tatami-status status="mention"></tatami-status>
+            </div>
         </ion-list>
     </ion-content>
 </ion-view>
