profile page ui

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -49,6 +49,20 @@
                                  &#xA0;
                             </a>
                         </li>
+                        <li ui-sref-active="active" class="dropdown pointer" ng-controller="LanguageController">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                        <span>
+                            <span class="glyphicon glyphicon-flag"></span>
+                            <span class="hidden-sm" translate="global.menu.language">Language</span>
+                            <b class="caret"></b>
+                        </span>
+                            </a>
+                            <ul class="dropdown">
+                                <li active-menu="{{language}}" ng-repeat="language in languages">
+                                    <a href="" ng-click="changeLanguage(language)" data-toggle="collapse" data-target=".navbar-collapse.in">{{language | findLanguageFromKey}}</a>
+                                </li>
+                            </ul>
+                        </li>
                         <li class="dropdown-submenu" ui-sref-active="active">
                             <a>
                                 <span class="glyphicon glyphicon-flag"></span>
@@ -173,7 +187,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a ui-sref="global.account.profile">
+                            <a ui-sref="profile">
                                 <span class="glyphicon glyphicon-user"></span>
                                 <span translate="global.account.profile.title"></span>
                             </a>
