--- a/mobile/www/app/components/follow/follower/follower.html
+++ b/mobile/www/app/components/follow/follower/follower.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Followers">
+<ion-view view-title="Followers" cache-view="false">
     <ion-content>
         <ion-list>
             <div ng-repeat="user in followers">
