--- a/mobile/www/app/components/home/timeline/detail.html
+++ b/mobile/www/app/components/home/timeline/detail.html
@@ -1,3 +1,5 @@
-<ion-view view-title="{{lineItem.username}}">
-    <tatami-conversation status="lineItem"></tatami-conversation>
+<ion-view view-title="{{vm.status.username}}">
+    <ion-content>
+        <tatami-conversation status="vm.status"></tatami-conversation>
+    </ion-content>
 </ion-view>
