Clicking the X while in the post view will return the user to the previous state

--- a/mobile/www/app/components/post/post.html
+++ b/mobile/www/app/components/post/post.html
@@ -1,9 +1,10 @@
 <ion-view view-title="Post">
+    <ion-nav-buttons side="secondary">
+        <button class="button button-clear button-small icon ion-close-round" style="opacity:0.4;" ng-click="vm.close()">
+        </button>
+    </ion-nav-buttons>
     <ion-content>
         <div class="padding">
-            <h4>Post here.</h4>
-            <hr/>
-
             <form name="newPost" novalidate="">
                 <div class="list">
                     <label class="item item-input">
