--- a/mobile/www/app/components/post/post.html
+++ b/mobile/www/app/components/post/post.html
@@ -3,8 +3,8 @@
         <button class="button button-clear button-small icon ion-close-round" style="opacity:0.4;" ng-click="vm.close()">
         </button>
     </ion-nav-buttons>
-    <ion-content>
-        <div class="padding">
+    <ion-content padding="true">
+        <div>
             <form name="newPost" novalidate="">
                 <div class="list">
                     <label class="item item-input">
@@ -18,13 +18,21 @@
                 </div>
             </form>
         </div>
-        <div ng-if="vm.imageUrl">
-            {{ vm.imageUrl }}
-            <img ng-show="vm.imageUrl !== undefined" ng-src="{{vm.imgUrl}}">
-        </div>
+        <span ng-repeat="image in vm.images">
+            <div class="list card">
+                <div class="item item-image">
+                    <img class="center" ng-show="vm.images.length > 0" ng-src="{{ image }}">
+                </div>
+            </div>
+        </span>
     </ion-content>
-    <ion-footer-bar align-title="right" keyboard-attach class="bar-stable apply-footer" style="margin-bottom: 44px;">
-        <button style="opacity: 0.5" class="button button-clear icon ion-camera" ng-click="vm.getPicture()"></button>
+    <ion-footer-bar align-title="right" keyboard-attach class="bar-stable apply-footer" style="bottom: 44px;">
+        <div class="row">
+            <button style="opacity: 0.5;" class="col-20 button button-clear icon ion-camera" ng-click="vm.getPicture()"></button>
+            <button style="opacity: 0.5;" class="col-20 button button-clear icon ion-images" ng-click="vm.getPictureFromLibrary()"></button>
+            <button style="opacity: 0.5;" class="col-20 button button-clear icon tatami-location" ng-click="vm.getLocation()"></button>
+        </div>
+
         <h1 class="title" style="opacity: 0.5;">{{ vm.charCount - vm.status.content.length }}</h1>
         <button class="button button-positive" ng-disabled="vm.status.content.length === 0 || !vm.status.content" ng-click="vm.post()">
             Post
