Add CSS rules to center images, and display icons on post footer bar based on platform

--- a/mobile/www/css/style.css
+++ b/mobile/www/css/style.css
@@ -31,3 +31,13 @@
     bottom:43px;
 }
 
+.platform-ios .bar.bar-footer {
+    bottom: 43px; !important;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
