--- a/mobile/scss/ionic.app.scss
+++ b/mobile/scss/ionic.app.scss
@@ -23,18 +23,12 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 .platform-ios {
     .tatami-location {
-        @extend .ion-ios-location
+        @extend .ion-ios-location;
     }
 }
 
 .platform-android {
     .tatami-location {
-        @extend .ion-android-locate
+        @extend .ion-android-locate;
     }
-}
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
 }
