--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -249,7 +249,7 @@
                 </li> <!-- Post Button -->
             </ul>
             <form class="navbar-form navbar-right" role="search">
-                <div class="col-lg-6">
+                <div class="col-span-6">
                     <input name="searchBar"
                            ng-keypress="searchStatuses($event)"
                            ng-model="searchString"
