--- a/mobile/www/css/ionic.app.css
+++ b/mobile/www/css/ionic.app.css
@@ -9730,3 +9730,12 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+.item-image i:last-child {
+  position: absolute;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  background-color: black;
+  top: 15px;
+  right: 15px; }
