Disable post button while images are being uploaded. This is to prevent duplicate images from being uploaded

--- a/mobile/www/app/components/post/post.html
+++ b/mobile/www/app/components/post/post.html
@@ -35,7 +35,7 @@
         </div>
 
         <h1 class="title" style="opacity: 0.5;">{{ vm.charCount - vm.status.content.length }}</h1>
-        <button class="button button-positive" ng-disabled="vm.status.content.length === 0 || !vm.status.content" ng-click="vm.post()">
+        <button class="button button-positive" ng-disabled="vm.status.content.length === 0 || !vm.status.content || vm.isPosting" ng-click="vm.post()">
             Post
         </button>
     </ion-footer-bar>
