Add state history for the follower tab

--- a/mobile/www/app/components/follow/follower/follower.html
+++ b/mobile/www/app/components/follow/follower/follower.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Followers" cache-view="false">
     <ion-content>
         <ion-list>
-            <div ng-repeat="user in followers">
+            <div ng-repeat="user in vm.followers">
                 <tatami-user user="user"></tatami-user>
             </div>
         </ion-list>
