Added view caching to all views to allow swipe to back. See https://github.com/driftyco/ionic/issues/3216

--- a/mobile/www/app/components/home/favorites/favorites.html
+++ b/mobile/www/app/components/home/favorites/favorites.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Favorites" cache-view="false">
+<ion-view view-title="Favorites">
     <ion-content>
         <ion-list>
             <div ng-repeat="favorite in vm.favorites">
