--- a/mobile/www/app/components/home/mentions/mentions.html
+++ b/mobile/www/app/components/home/mentions/mentions.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Mentions" cache-view="false">
+<ion-view view-title="Mentions">
     <ion-content>
         <ion-list>
             <div ng-repeat="mention in vm.mentioned">
