--- a/mobile/www/app/components/home/more/more.html
+++ b/mobile/www/app/components/home/more/more.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Timeline" cache-view="false">
+<ion-view view-title="Timeline">
     <ion-content>
         <ion-list>
             <button ng-click="vm.logout()" class="button ion-power button-full button-assertive">Logout</button>
