Add ion-refresher, need to update the on-refresh method

--- a/mobile/www/app/components/home/timeline/timeline.html
+++ b/mobile/www/app/components/home/timeline/timeline.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Timeline">
     <ion-content>
+        <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
         <ion-list>
             <ion-item ng-repeat="status in vm.statuses">
                 <tatami-status status="status"></tatami-status>
