Added password page with the ability for the user to change their password. Added state changes from main page state and from account state. To Do : Update .json files to properly translate fields on password page.

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -181,7 +181,7 @@
                             </a>
                         </li>
                         <li>
-                            <a ui-sref="global.account.password">
+                            <a ui-sref="account.password">
                                 <span class="glyphicon glyphicon-lock"></span>
                                 <span translate="global.account.password.title"></span>
                             </a>
