Add support to refresh followers by pulling down

--- a/mobile/www/app/components/follow/follower/follower.html
+++ b/mobile/www/app/components/follow/follower/follower.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Followers">
     <ion-content>
+        <ion-refresher on-refresh="vm.getNewFollowers()"></ion-refresher>
         <ion-list>
             <div ng-repeat="user in vm.followers">
                 <tatami-user user="user"></tatami-user>
