--- a/mobile/www/app/components/follow/suggested/suggested.html
+++ b/mobile/www/app/components/follow/suggested/suggested.html
@@ -1,7 +1,8 @@
 <ion-view view-title="Who to Follow">
     <ion-content>
+        <ion-refresh on-refresh="vm.getNewSuggested()"></ion-refresh>
         <ion-list>
-            <div ng-repeat="user in suggested">
+            <div ng-repeat="user in vm.suggested">
                 <tatami-user user="user"></tatami-user>
             </div>
         </ion-list>
