Fixed Preferences page and established page functionality

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -175,7 +175,7 @@
                             </a>
                         </li>
                         <li>
-                            <a ui-sref="global.account.preferences">
+                            <a ui-sref="preferences">
                                 <span class="glyphicon glyphicon-cog"></span>
                                 <span translate="global.account.preferences.title"></span>
                             </a>
